--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://ranisat/github.io/Portfolio-Rani",
-  "name": "portfolio-1",
+  "name": "rani_portfolio",
+  "homepage" :"https://ranisat/github.io/rani_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
