--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "rani_portfolio",
-  "homepage" :"https://ranisat/github.io/rani_portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
